<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCreateContact"
        android:id="@+id/buttonCreateContact"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonEditContact"
        android:id="@+id/buttonEditContact"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/buttonCreateContact"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonDeleteContact"
        android:layout_marginTop="20dp"
        android:id="@+id/buttonDeleteContact"
        android:layout_below="@+id/buttonEditContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonDisplayContacts"
        android:id="@+id/buttonDisplayContact"
        android:layout_below="@+id/buttonDeleteContact"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonFinish"
        android:id="@+id/buttonFinish"
        android:layout_below="@+id/buttonDisplayContact"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
